--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
   <div id="about-works" class="section work">
     <h2>作品紹介</h2>
     <div class="container">
-      <div class="work-list"> <a class="work-item" href="file:///Users/ootsukatsukasa/Desktop/todo/index.html"><img class="work-img" src="img/my portfolio_todo.jpg" alt="todoリストの写真"></a>
+      <div class="work-list"> <a class="work-item" href="https://tsukasa4223.github.io/todo-list/"><img class="work-img" src="img/my portfolio_todo.jpg" alt="todoリストの写真"></a>
         <p class="work-name"><strong>TODOリスト</strong></p>
-        <p class="work-info">skills / HTML, JavaScript, Bootstrap</p> <a class="work-item" href="file:///Users/ootsukatsukasa/Desktop/camp/index.html"><img class="work-img" src="img/IMG_5411 2.JPG" alt="campサイトの写真"></a>
+        <p class="work-info">skills / HTML, JavaScript, Bootstrap</p> <a class="work-item" href="https://tsukasa4223.github.io/camp-site/"><img class="work-img" src="img/IMG_5411 2.JPG" alt="campサイトの写真"></a>
         <p class="work-name"><strong>How to camp</strong></p>
         <p class="work-info">skills / HTML, CSS, JavaScript, Scss</p>
       </div>
